--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,10 +11,22 @@
     <!-- bootstrap link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/6d0a472c37.js" crossorigin="anonymous"></script>
+    <!-- bootstrap script tag -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <!-- link for stylesheet -->
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+    <!-- navigation bar -->
+    <nav class="navbar navbar bg-dark navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">cameraDotcom</i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -22,8 +34,93 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Find your camera here</a>
+                        </li>
+                        <div class="profile-icon">
+                            <li class="nav-item">
+                                <a class="nav-link active" href="#"><i class="fa-solid fa-user"></i></a>
+                            </li>
+                        </div>
+                    </ul>
             </div>
         </div>
     </nav>
+    <!-- carousel1 -->
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" style="background-color: black;height:600px;">
+            <div class="carousel-item active" style="background-color: black;height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>zero</h5>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-color: black; height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>first</h5>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-color: black;height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>second</h5>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- content1 -->
+    <div style="background-color:#E5E5CB;height:600px;">
+
+    </div>
+    <!-- carousel2 -->
+    <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner" style="background-color: black;height:600px;">
+            <div class="carousel-item active" style="background-color: black;height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>zero</h5>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-color: black; height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>first</h5>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-color: black;height:600px;">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>second</h5>
+                </div>
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls1" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls1" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+    <!-- photographers cards -->
+    <div style="background-color:#E5E5CB;height:600px;">
+    
+    </div>
+    <!-- subscription cards -->
+    <div style="background-color:#E5E5CB;height:600px;">
+    
+    </div>
+    <!-- fotter -->
+    <div style="background-color:#D5CEA3;height:600px;">
+    
+    </div>
 </body>
 </html>
