added a module to the project

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,11 +22,11 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <!-- link for stylesheet -->
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="/home.css">
 </head>
 <body>
     <!-- navigation bar -->
-    <nav class="navbar navbar bg-dark navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">cameraDotcom</i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -36,10 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Find your camera here</a>
+                            <a class="nav-link active" href="/camera">Find your camera here</a>
                         </li>
                         <div class="profile-icon">
                             <li class="nav-item">
@@ -54,16 +51,78 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" style="background-color: black;height:600px;">
             <div class="carousel-item active" style="background-color: black;height:600px;">
+                    <!-- heading -->
+                    <div class="carousel-heading">
+                        <h1 style="color:white;">heading1</h1>
+                    </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus arcu bibendum at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse. Metus dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Tempus quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>zero</h5>
                 </div>
             </div>
             <div class="carousel-item" style="background-color: black; height:600px;">
+                <!-- heading -->
+                <div class="carousel-heading">
+                    <h1 style="color:white;">heading1</h1>
+                </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus arcu bibendum
+                        at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse. Metus
+                        dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Tempus
+                        quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>first</h5>
                 </div>
             </div>
             <div class="carousel-item" style="background-color: black;height:600px;">
+                <!-- heading -->
+                <div class="carousel-heading">
+                    <h1 style="color:white;">heading1</h1>
+                </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus arcu bibendum
+                        at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse. Metus
+                        dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum enim. Tempus
+                        quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>second</h5>
                 </div>
@@ -79,23 +138,106 @@
         </a>
     </div>
     <!-- content1 -->
-    <div style="background-color:#E5E5CB;height:600px;">
+    <div style="background-color:#FAFAFA;height:600px;">
 
     </div>
     <!-- carousel2 -->
     <div id="carouselExampleControls1" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner" style="background-color: black;height:600px;">
             <div class="carousel-item active" style="background-color: black;height:600px;">
+                <!-- heading -->
+                <div class="carousel-heading">
+                    <h1 style="color:white;">heading1</h1>
+                </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque
+                        diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu
+                        mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices
+                        neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus
+                        arcu bibendum at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse.
+                        Metus dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum
+                        enim. Tempus quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>zero</h5>
                 </div>
             </div>
             <div class="carousel-item" style="background-color: black; height:600px;">
+                <!-- heading -->
+                <div class="carousel-heading">
+                    <h1 style="color:white;">heading1</h1>
+                </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque
+                        diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu
+                        mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices
+                        neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus
+                        arcu bibendum
+                        at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse.
+                        Metus
+                        dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum
+                        enim. Tempus
+                        quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>first</h5>
                 </div>
             </div>
             <div class="carousel-item" style="background-color: black;height:600px;">
+                <!-- heading -->
+                <div class="carousel-heading">
+                    <h1 style="color:white;">heading1</h1>
+                </div>
+                <div class="carousel-paragraph">
+                    <!-- paragraph -->
+                    <p style="color: white;">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut
+                        labore et dolore magna
+                        aliqua. Duis ut diam quam nulla porttitor massa id neque aliquam. Felis donec et odio pellentesque
+                        diam volutpat
+                        commodo. Turpis egestas sed tempus urna. Varius quam quisque id diam vel quam elementum pulvinar. Eu
+                        mi bibendum
+                        neque
+                        egestas congue quisque. Tortor posuere ac ut consequat semper viverra nam libero justo. Et ultrices
+                        neque ornare
+                        aenean.
+                        Mauris augue neque gravida in fermentum et sollicitudin ac orci. Vitae auctor eu augue ut lectus
+                        arcu bibendum
+                        at
+                        varius. Risus sed vulputate odio ut enim blandit volutpat maecenas. Viverra tellus in hac habitasse.
+                        Metus
+                        dictum at
+                        tempor commodo ullamcorper a lacus vestibulum. Lorem dolor sed viverra ipsum nunc aliquet bibendum
+                        enim. Tempus
+                        quam
+                        pellentesque nec nam.</p>
+                </div>
                 <div class="carousel-caption d-none d-md-block">
                     <h5>second</h5>
                 </div>
@@ -119,7 +261,7 @@
     
     </div>
     <!-- fotter -->
-    <div style="background-color:#D5CEA3;height:600px;">
+    <div style="background-color:#D5CEA3;height:300px;">
     
     </div>
 </body>
