--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -4,9 +4,122 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link for fontawsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <!-- bootstrap script tag -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <!-- link for stylesheet -->
+    <link rel="stylesheet" href="/camera.css">
+    <!-- link for google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat&family=Sacramento&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-    <h1>this is your main module</h1>
+    <nav class="navbar navbar bg-white navbar-expand-lg">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">cameraDotcom</i></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/camera">Camera Setup</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- division1 -->
+    <div class="division1">
+        <div class="content">
+            <h1>welcome</h1>
+            <h1>You could earn</h1>
+        </div>
+        <div class="img-sec">
+            <img src="/images/camera.jpg" alt="camera">
+        </div>
+        <div>
+            <h1>20,000</h1>
+        </div>
+        <div>
+            <input type="range" min="1" max="20" step="1"/>
+        </div>
+        <div class="contant-link">
+            <a href="#"><h1>Learn how we estimate your earnings</h1></a>
+        </div>
+    </div>
+    <!-- division2 -->
+    <div class="division2">
+        <div class="heading">
+            <h1>Easy camera setup</h1>
+        </div>
+        <div class="flex-container">
+        <div class="step1">
+            <h1>Step1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et 
+                dolore magna aliqua. Sed velit dignissim sodales ut eu. Tincidunt nunc pulvinar sapien et. Sed lectus 
+                vestibulum mattis ullamcorper. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. 
+                Eu facilisis sed odio morbi quis commodo. Egestas sed tempus urna et pharetra pharetra. In pellentesque 
+                massa placerat duis. Laoreet id donec ultrices tincidunt arcu non sodales. Eleifend mi in nulla posuere. 
+                Nec tincidunt praesent semper feugiat nibh.</p>
+        </div>
+        <div class="step2">
+            <h1>Step2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+                incididunt ut labore et dolore magna aliqua. Sed velit dignissim sodales ut eu. 
+                Tincidunt nunc pulvinar sapien et. Sed lectus vestibulum mattis ullamcorper. Aliquam 
+                vestibulum morbi blandit cursus risus at ultrices mi tempus. Eu facilisis sed odio morbi 
+                quis commodo. Egestas sed tempus urna et pharetra pharetra. In pellentesque massa placerat
+                 duis. Laoreet id donec ultrices tincidunt arcu non sodales. Eleifend mi in nulla posuere.
+                  Nec tincidunt praesent semper feugiat nibh.</p>
+        </div>
+        <div class="step3">
+            <h1>Step3</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore 
+                magna aliqua. Sed velit dignissim sodales ut eu. Tincidunt nunc pulvinar sapien et. Sed lectus vestibulum mattis 
+                ullamcorper. Aliquam vestibulum morbi blandit cursus risus at ultrices mi tempus. Eu facilisis sed odio morbi quis 
+                commodo. Egestas sed tempus urna et pharetra pharetra. In pellentesque massa placerat duis. Laoreet id donec ultrices 
+                tincidunt arcu non sodales. Eleifend mi in nulla posuere. Nec tincidunt praesent semper feugiat nibh.</p>
+        </div>
+        </div>
+    </div>
+    <!-- division3 -->
+    <div class="division3">
+        <div class="question">
+            <h1>Your questions</h1>
+            <h1>Answered</h1>
+        </div>
+        <div class="question-and-answers">
+            <h1>first question</h1>
+            <h1>second question</h1>
+            <h1>third question</h1>
+            <h1>forth question</h1>
+            <h1>fifth question</h1>
+        </div>
+    </div>
+    <!-- division4 -->
+    <fotter>
+        <div>
+
+        </div>
+    </fotter>
 </body>
 </html>
