--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -67,6 +67,17 @@
         <div class="content-link">
             <h1 class="underline-content">Learn how we estimate your earnings</h1>
         </div>
+        <div class="highlight">
+            <div>
+                <h1>cameraDotcom</h1>
+            </div>
+            <div>
+                <h1>will</h1>
+            </div>
+            <div>
+                <h1>ease your work</h1>
+            </div>
+        </div>
         </div>
     </div>
     <!-- division2 -->
