--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -122,17 +122,44 @@
             <h1>Answered</h1>
         </div>
         <div class="question-and-answers">
-            <h1>first question</h1>
-            <h1>second question</h1>
-            <h1>third question</h1>
-            <h1>forth question</h1>
-            <h1>fifth question</h1>
+            <h1>first question<a href="#"><img src="/images/down-arrow.png" alt="down-arrow"/></a></h1><hr/>
+            <h1>second question<a href="#"><img src="/images/down-arrow.png" alt="down-arrow"/></a></h1><hr/>
+            <h1>third question<a href="#"><img src="/images/down-arrow.png" alt="down-arrow"/></a></h1><hr/>
+            <h1>forth question<a href="#"><img src="/images/down-arrow.png" alt="down-arrow"/></a></h1><hr/>
+            <h1>fifth question<a href="#"><img src="/images/down-arrow.png" alt="down-arrow"/></a></h1><hr/>
         </div>
     </div>
     <!-- division4 -->
     <fotter>
-        <div>
-
+        <div class="division4-sections">
+            <div class="division4-sec">
+                <h1>Support</h1>
+                <p>Help Center</p>
+                <p>Supporting people with disabilities</p>
+                <p>Cancellation option</p>
+                <p>Report a neighbourhood concern</p>
+            </div>
+            <div class="division4-sec">
+                <h1>Community</h1>
+                <p>Help Center</p>
+                <p>Supporting people with disabilities</p>
+                <p>Cancellation option</p>
+                <p>Report a neighbourhood concern</p>
+            </div>
+            <div class="division4-sec">
+                <h1>Hosting</h1>
+                <p>Help Center</p>
+                <p>Supporting people with disabilities</p>
+                <p>Cancellation option</p>
+                <p>Report a neighbourhood concern</p>
+            </div>
+            <div class="division4-sec">
+                <h1>cameraDotcom</h1>
+                <p>Help Center</p>
+                <p>Supporting people with disabilities</p>
+                <p>Cancellation option</p>
+                <p>Report a neighbourhood concern</p>
+            </div>
         </div>
     </fotter>
     <script type="text/javascript" src="/script/camera.js"></script>
