--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -41,7 +41,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">Camera Setup</a>
+                        <!-- <form method="get" action="/camerasetup"> -->
+                            <submit><a class="nav-link active" href="/camerasetup">Camera Setup</a></submit>
+                        <!-- </form> -->
                     </li>
                 </ul>
             </div>
