--- a/views/camerasetup.ejs
+++ b/views/camerasetup.ejs
@@ -5,8 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <!-- link for style sheet -->
+    <link rel="stylesheet" href="/camerasetup.css" />
+    <!-- link for fontawsome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- bootstrap link -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <!-- bootstrap script tag -->
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
+    <!-- link for google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>this is camerasetup page</h1>
+    <!-- data for register in form  -->
+    <form method="post" action="/update">
+      <!-- <h1>Welcome to cameraDotcom</h1> -->
+      <div class="form-content">
+        <div>
+          <h4>ENTER YOUR NAME</h4>
+          <input type="text" name="name" placeholder="ENTER YOYR NAME" />
+        </div>
+        <div>
+          <h4>ENTER YOUR AGE</h4>
+          <input type="number" name="age" placeholder="ENTER YOYR AGE" />
+        </div>
+        <div>
+          <h4>NAME OF YOUR CAMERA</h4>
+          <input type="text" name="camera" placeholder="NAME OF YOUR CAMERA" />
+        </div>
+        <div>
+          <h4>WHAT COLOR DO YOU LIKE MOST</h4>
+          <input
+            type="text"
+            name="color"
+            placeholder="WHAT COLOR DO YOU LIKE MOST"
+          />
+        </div>
+        <button type="submit">submit</button>
+      </div>
+    </form>
   </body>
 </html>
