--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -42,7 +42,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <!-- <form method="get" action="/camerasetup"> -->
-                            <submit><a class="nav-link active" href="/camerasetup">Camera Setup</a></submit>
+                            <submit><a class="nav-link active" href="#">Camera Setup</a></submit>
                         <!-- </form> -->
                     </li>
                 </ul>
