--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="/camera">Find your camera here</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="/menu">Menu</a>
+                        </li>
                         <div class="profile-icon">
                             <li class="nav-item">
                                 <a class="nav-link active" href="/login"><i class="fa-solid fa-user"></i></a>
@@ -264,5 +267,21 @@
     <div style="background-color:#D5CEA3;height:300px;">
     
     </div>
+    <!-- <div class="profile-container">
+        <div class="profile-div">
+            <div>
+                <a><h3>Profile</h3></a>
+            </div>
+            <div>
+                <a><h3>settings</h3></a>
+            </div>
+            <div>
+                <a><h3>signin</h3></a>
+            </div>
+            <div>
+                <a><h3>signup</h3></a>
+            </div>
+        </div>
+    </div> -->
 </body>
 </html>
