--- a/views/login.ejs
+++ b/views/login.ejs
@@ -43,10 +43,10 @@
             </div>
             <div class="new-user">
               <h4>
-                New user?<a href="/signup"><u>Create Account</u></a>
+                New user?<a href="/signuppage"><u>Create Account</u></a>
               </h4>
             </div>
-            <div class="copy-right">&copy; Hemanth</div>
+            <div class="copy-right">&copy; cameraDotcom</div>
           </form>
         </div>
       </div>
