--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/login.css" />
+    <link rel="stylesheet" href="/signup.css" />
     <title>Document</title>
   </head>
   <body>
@@ -12,38 +12,40 @@
       <div class="left-container"></div>
       <div class="right-container">
         <div class="login-container">
-          <div>
-            <h1>CameraDotCom</h1>
-          </div>
-          <div class="greetings">
-            <h2>Welcome to cameraDotcom</h2>
-          </div>
-          <div class="label">
-            <h3>User name</h3>
-          </div>
-          <div class="input-field">
-            <input type="text" name="username" required />
-            <p>Incorrect user name</p>
-          </div>
-          <div class="label">
-            <h3>Password</h3>
-          </div>
-          <div class="input-field">
-            <input type="text" name="password" required />
-            <p>Incorrect password</p>
-          </div>
-          <div class="forget-pass">
-            <a href="#"><h6>Forget password?</h6></a>
-          </div>
-          <div class="button">
-            <div class="container1">
-              <a href="#"><button type="submit">Sign in</button></a>
+          <form method="post" action="/signup">
+            <div>
+              <h1>CameraDotCom</h1>
             </div>
-          </div>
-          <div class="new-user">
+            <div class="greetings">
+              <h2>Welcome to cameraDotcom</h2>
+            </div>
+            <div class="label">
+              <h3>User name</h3>
+            </div>
+            <div class="input-field">
+              <input type="text" name="username" required />
+              <p>Incorrect user name</p>
+            </div>
+            <div class="label">
+              <h3>Password</h3>
+            </div>
+            <div class="input-field">
+              <input type="text" name="password" required />
+              <p>Incorrect password</p>
+            </div>
+            <div class="forget-pass">
+              <a href="#"><h6>Forget password?</h6></a>
+            </div>
+            <div class="button">
+              <div class="container1">
+                <a href="/signup"><button type="submit">Sign up</button></a>
+              </div>
+            </div>
+            <!-- <div class="new-user">
             <h4>New user?<u>Create Account</u></h4>
-          </div>
-          <div class="copy-right">&copy; Hemanth</div>
+          </div> -->
+            <div class="copy-right">&copy; cameraDotcom</div>
+          </form>
         </div>
       </div>
     </div>
