--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -88,6 +88,10 @@
         <div class="data">
           <h2>sex: <%= data[i].sex%></h2>
         </div>
+        <div class="data">
+          <a href="/booknow"><button type="button">Book now</button></a>
+          <a href="/checknow"><button type="button">Check now</button></a>
+        </div>
       </div>
     </div>
     <% } %>
