--- a/public/menu.css
+++ b/public/menu.css
@@ -33,6 +33,7 @@ li.nav-item:hover {
   background-color: lightblue;
   border-radius: 20px;
   border-color: lightblue;
+  border-style: solid;
 }
 .button-container {
   position: absolute;
@@ -83,14 +84,60 @@ li.nav-item:hover {
 body {
   position: relative;
 }
+/* container styling */
 .container {
   border-radius: 30px;
-  height: 730px;
-  width: 1000px;
+  height: 500px;
+  width: 350px;
   background-color: whitesmoke;
   position: absolute;
-  left: 200px;
-  top: 40px;
+  left: 550px;
+  top: 150px;
   opacity: 1;
   visibility: hidden;
+  font-family: sans-serif;
+}
+.container h2 {
+  display: inline;
+}
+.container div {
+  display: inline;
+}
+.container div h1 {
+  margin-top: 30px;
+  text-align: center;
+}
+.body-container div {
+  margin-left: 50px;
+}
+.body-container input {
+  border-style: solid;
+  border-width: 0px 0px 1px 0px;
+  border-color: black;
+}
+.body-container h2 {
+  margin-top: 30px;
+  font-size: large;
+}
+.body-container button {
+  margin-top: 30px;
+  width: 200px;
+  height: 50px;
+  border-radius: 20px;
+  background-color: #f7f7f7;
+  border-color: #f7f7f7;
+  border-style: solid;
+}
+/* container1 styling */
+.container1 {
+  border-radius: 30px;
+  height: 500px;
+  width: 350px;
+  background-color: whitesmoke;
+  position: absolute;
+  left: 550px;
+  top: 150px;
+  opacity: 1;
+  visibility: hidden;
+  font-family: sans-serif;
 }
